cf_analysis_results/checkerframework_results/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8.txt
../../../../datasets/june2020_dataset/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/FieldObject.java:81: error: (argument) $$ 4 $$ typeOfObject $$ getHandler $$ @MustCall Class<capture#947 extends @MustCallUnknown FieldObject> $$ @MustCallUnknown Class<? extends @MustCall FieldObject> $$ ( 2635, 2649 ) $$ incompatible argument for parameter typeOfObject of getHandler.
            mIntHandlers.getHandler(obj.getClass()).performInteraction(this, obj);
                                                ^
  found   : @MustCall Class<capture#947 extends @MustCallUnknown FieldObject>
  required: @MustCallUnknown Class<? extends @MustCall FieldObject>
1 error
